Added argument "gridded=TRUE" for plot(RasterLayer, RasterLayer), to show counts for intervals (suggested by Agustin Lobo)
Fixed bug in sampleRandom with "rowcol=TRUE" (reported by Agustin Lobo)
Fixed bug with RAT tables in native format (reported by Joseph Steward)
Added big.matrix as a "driver" (file format). This is experimental (and not documented).

--- 1-September-2012, version 2.0-12
fixed bug in summary reported by Agustin Lobo
fixed bug in terrain/flowdir reported by Marie Morfin
zlim (argument to plot) did not function properly when used to extend the values range (reported by Bart)
writeRaster now honours the value of the NAvalue argument when writing a ncdf file (requested by Thiago Veloso)
added support for the ncdf4 library
fixed many spelling mistakes in the documentation reported by Phil Heilman
function fourCellsFromXY is now visible.
method 'freq' implemented for 'RasterStackBrick'
new function 'layerize'
function 'reclassify' replaces identical 'reclass' (still available but with deprecation warning) to avoid hiding by  xts::reclass
added arguments to writeRaster to allow for writing layers to individual files

--- 27-June-2012, version 2.0-08
bug fixes (both introduced in version 2.0-04):
multilayer files of the 'raster' format have a corrupt header file (reported by Jonathan Greenberg)
subset with a RasterBrick fails because of an error when accessing the z slot (reported by Matt Fischer)
crop with a RasterStack failed
new option 'tmptime' to set after how many hours temp files may be deleted. Suggested by Shannon Albeke

--- 17-June-2012, version 2.0-04
More support for factors and (related) Raster Attribute Tables (functions ratify, deratify)
z-values are saved to file (native format only)
Old slot @zvalue removed (in favor of slot @z)
New function 'names' to (eventually) replace 'layerNames', for compatibility with sp.
New function 'proj4string' (equivalent to 'projection') for compatibility with sp.
New function 'sampleStratified'