@@ -1,8 +1,8 @@
 Package: raster
 Type: Package
 Title: Geographic analysis and modeling with raster data
-Version: 2.0-21
-Date: 4-October-2012
+Version: 2.0-22
+Date: 7-October-2012
 Depends: methods, sp, R (>= 2.14.0)
 Suggests: rgdal (>= 0.6-28), rgeos (>= 0.2-3), ncdf, ncdf4, igraph, snow, bigmemory, tcltk, rasterVis
 Author: Robert J. Hijmans & Jacob van Etten
